# src/app/api/models.ts
@@ -1,3 +1,5 @@
+export { EmprestimoDto } from './models/emprestimo-dto';
 export { LivroAlteravelDto } from './models/livro-alteravel-dto';
 export { LivroDto } from './models/livro-dto';
+export { Emprestimo } from './models/emprestimo';
 export { Livro } from './models/livro';
