# src/app/api/models/emprestimo-dto.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface EmprestimoDto {
+  dataDevolucao?: string;
+  dataEmprestimo?: string;
+  idEmprestimo?: number;
+  livroID?: number;
+  nomePessoa?: string;
+}
