# src/app/api/models/emprestimo.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Emprestimo {
+  dataDevolucao?: string;
+  dataEmprestimo?: string;
+  idEmprestimo?: number;
+  livroID?: number;
+  nomePessoa?: string;
+}
