# src/app/api/services.ts
@@ -1,1 +1,2 @@
+export { EmprestimoControllerService } from './services/emprestimo-controller.service';
 export { LivroControllerService } from './services/livro-controller.service';
